--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
   </head>
   <body class="centered">
     <div class="card">
-      <h1>Attività UFO</h1>
-      <p>Benvenuto! Scegli un'azione:</p>
+      <h1>ATTIVITÀ UFO</h1>
+      <p>BENVENUTO! SCEGLI UN'AZIONE:</p>
       <a href="{{ url_for('main.register') }}" class="btn">Registrati</a>
       <a href="{{ url_for('main.checkin') }}" class="btn">Check-in</a>
     </div>
